--- a/app/src/main/res/layout/content_bottom_sheet.xml
+++ b/app/src/main/res/layout/content_bottom_sheet.xml
@@ -8,6 +8,7 @@
     app:behavior_peekHeight="40dp"
     app:layout_behavior="@string/bottom_sheet_behavior">
     <LinearLayout
+        android:id="@+id/ll_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
